# backend_py

./: .gitignore  README.md  main .py  pre_commit.sh  pyproject.toml
.github/workflows/: cicd.yml  static_code_analysis.yml
app/: main.py
tests/: test_main.py
