[project]
name = "backend-py"
version = "0.1.0"
description = "Sample backend project developed with FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "mypy>=1.15.0",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
    "ruff>=0.10.0",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
